Bug 47195 - Weborder: FF UI issue on Checkout: truncated all selection fields.

--- a/skins/weborder/css/checkout.css
+++ b/skins/weborder/css/checkout.css
@@ -130,6 +130,12 @@
     font-size: 21px;
 }
 
+@-moz-document url-prefix() {
+    .checkout-order-details .cancel::before {
+        padding: 10px 14px 11px 4px;
+    }
+}
+
 .checkout-order-details .types {
     min-width: 144px;
 }
